removed compute_pI() and fixed compiler warnings

--- a/code/frag_singleton_new/Makefile.linux
+++ b/code/frag_singleton_new/Makefile.linux
@@ -3,14 +3,11 @@ PYTHON_INCLUDE=/usr/include/python2.7
 all: PeptideFragmentSingleton.so test
 
 # build my C library
-libpeptidefragmentsingleton.so: peptide_fragment.o compute_pI.o
-	gcc -Wall -shared -o libpeptidefragmentsingleton.so peptide_fragment.o compute_pI.o
+libpeptidefragmentsingleton.so: peptide_fragment.o
+	gcc -Wall -shared -o libpeptidefragmentsingleton.so peptide_fragment.o
 
 peptide_fragment.o: peptide_fragment.hpp peptide_fragment.cpp
 	gcc -Wall -fPIC -c -o peptide_fragment.o peptide_fragment.cpp
-
-compute_pI.o: compute_pI.c
-	gcc -Wall -fPIC -c -o compute_pI.o compute_pI.c
 
 # generate the binding code
 peptide_fragment-binding.cpp: peptide_fragment.hpp peptide_fragment.py
@@ -28,4 +25,4 @@ test: test.cpp libpeptidefragmentsingleton.so
 	g++ -o test test.cpp -L. -lpeptidefragmentsingleton
 
 clean:
-	rm -f test .o *.so *.gch peptide_fragment-binding.cpp *~ *# *2>/dev/null
+	rm -f test *.o *.so *.gch peptide_fragment-binding.cpp *~ *# *2>/dev/null
